# ethbeijing-demo-izk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  compile_deps.sh  run_demo.sh
demo-izk/: CMakeLists.txt  demo-ecdsa.h  demo-http.h  demo-izk.cpp  demo-izk.h  utils.h
test/: demo-ecdsa.cpp  demo-http.cpp  demo-izk.cpp  demo.cpp
